refactored board class into movegeneration and boardutils, with minor changes to providing the generated moves to the gamelogic class